--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.7",
+    "@uploadthing/react": "^6.7.2",
+    "mongoose": "^8.6.0",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "tailwindcss-animate": "^1.0.7"
+    "svix": "^1.32.0",
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.13.2"
   },
   "devDependencies": {
     "@types/node": "^20",
