--- a/package.json
+++ b/package.json
@@ -6,38 +6,39 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.3.7",
-    "@clerk/themes": "^2.1.27",
-    "@hookform/resolvers": "^3.9.0",
+    "@clerk/nextjs": "^6.35.0",
+    "@clerk/themes": "^2.4.35",
+    "@hookform/resolvers": "^5.0.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
-    "@uploadthing/react": "^6.7.2",
-    "class-variance-authority": "^0.7.0",
+    "@uploadthing/react": "^7.3.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.438.0",
-    "mongoose": "^8.6.0",
-    "next": "14.2.7",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
-    "svix": "^1.32.0",
-    "tailwind-merge": "^2.5.2",
+    "lucide-react": "^0.553.0",
+    "mongoose": "^8.19.3",
+    "next": "^16.0.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.66.0",
+    "svix": "^1.81.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.13.2",
-    "zod": "^3.23.8"
+    "uploadthing": "^7.7.4",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.7",
+    "@types/node": "^24",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "^16.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5.9.0"
   }
 }
